--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ alembic==1.5.6
 Bootstrap-Flask==1.5.1
 click==7.1.2
 dnspython==2.1.0
+psycopg2-binary==2.8.6
 dominate==2.6.0
 email-validator==1.1.2
 et-xmlfile==1.0.1
@@ -26,3 +27,4 @@ SQLAlchemy==1.3.23
 visitor==0.1.3
 Werkzeug==1.0.1
 WTForms==2.3.3
+gunicorn==20.1.0
